Issue #8965: initfsencoding() doesn't change the encoding on Mac OS X

File system encoding have to be hardcoded to "utf-8" on Mac OS X. r81190
introduced a regression: the encoding was changed depending on the locale.